# src/controllers/authController.js
@@ -1,8 +1,18 @@
 const express = require('express');
+const bcrypt = require('bcryptjs');
+const jwt = require('jsonwebtoken');
+
+const authConfig = require('../config/auth.json')
 
 const User = require('../models/User');
 
 const router = express.Router();
+
+function generateToken(params = {}){
+    return jwt.sign(params, authConfig.secret,{
+        expiresIn: 86400,
+    });
+}
 
 router.post('/register', async (req, res)=>{
     const { email } = req.body;
@@ -21,5 +31,22 @@ router.post('/register', async (req, res)=>{
             return res.status(400).send({error: 'Falha ao tentar registrar'})
         } 
 });
+
+router.post('/authenticate', async (req, res) =>{
+    const {email, password} = req.body;
+
+    const user = await User.findOne({email}).select('+password');
+
+    if(!user)
+        return res.status(400).send({error: 'Falha na tentativa de registro'});
+
+    if(!await bcrypt.compare(password, user.password))
+        return res.status(400).send({error: 'Senha invalida'});
+
+    user.password = undefined;
+
+    res.send({ token: generateToken({id: user.id}),});
+
+})
 
 module.exports = app => app.use('/auth',router);
